// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: Progress Steps BasicSteps renders 1`] = `
<Fragment>
  <h2
    id="basic-usage"
  >
    Basic usage
  </h2>
  <p>
    The standard steps component will render horizontally and scale according to the size of its parent.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Steps
      steps={
        Array [
          Object {
            "completed": true,
            "subtitle": "Authentication",
            "title": "Step one",
          },
          Object {
            "ongoing": true,
            "selected": true,
            "title": "Step two",
          },
          Object {
            "title": "Step three",
          },
          Object {
            "title": "Step four",
          },
        ]
      }
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Progress Steps ClickableSteps renders 1`] = `
<Fragment>
  <h2
    id="clickable-steps"
  >
    Clickable steps
  </h2>
  <p>
    Add an anchor element (
    <CodeTags
      code="<a>"
      type="primary"
    />
    ) to the list item element ( 
    <CodeTags
      code="<li>"
      type="primary"
    />
    ). Ensure that all content within the list element is also inside the anchor element.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Steps
      steps={
        Array [
          Object {
            "clickable": true,
            "completed": true,
            "title": "Step one",
          },
          Object {
            "clickable": true,
            "ongoing": true,
            "title": "Step two",
          },
          Object {
            "clickable": true,
            "selected": true,
            "title": "Step three",
          },
          Object {
            "clickable": true,
            "title": "Step four",
          },
          Object {
            "title": "Step Five",
          },
          Object {
            "title": "Step Six",
          },
        ]
      }
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Progress Steps VerticalSteps renders 1`] = `
<Fragment>
  <h2
    id="vertical-steps"
  >
    Vertical steps
  </h2>
  <p>
    If you wish to use steps vertically you can add 
    <CodeTags
      code=".steps-vertical"
      type="secondary"
    />
     to the 
    <CodeTags
      code="<div>"
      type="primary"
    />
     element.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Steps
      steps={
        Array [
          Object {
            "completed": true,
            "title": "Step one",
          },
          Object {
            "ongoing": true,
            "selected": true,
            "title": "Step two",
          },
          Object {
            "title": "Step three",
          },
          Object {
            "title": "Step four",
          },
        ]
      }
      vertical={true}
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Progress Steps renders 1`] = `
<DocContainer>
  <p
    className="lead"
  >
    Use steps to visualize the users progress through a process.
  </p>
  <BasicSteps />
  <VerticalSteps />
  <ClickableSteps />
</DocContainer>
`;
